# MLOps-Training

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/fastapi-training/: crud.py  crud_simple.py  example.py  pydantic_example.py
src/fastapi_training/: README.md  crud.py  crud_simple.py  example.py  requirements.txt  response_model.py
src/fastapi_training/basics/: crud_simple.py  query_parameters.py
src/fastapi_training/docker/: Dockerfile  commands.txt  docker-compose.yaml  docker-compose.yml
src/fastapi_training/docker/my_app/: crud.py  database.py  main.py  models.py
src/fastapi_training/my_app/: crud.py  database.py  main.py  models.py  schemas.py
src/model_deploy_training/: Makefile
src/model_deploy_training/app/: database.py  main.py  models.py
src/model_deploy_training/simple_app/: crud.py  main.py
src/model_registry_training/: README.md  create_experiment.py  create_run.py  export_data.py  load_model.py  requirements.txt  train.py
src/model_registry_training/docker/: Dockerfile
src/model_registry_training/mlruns/0/: meta.yaml
src/postgresql_training/: README.md  create_table.py  insert_row.py  insert_rows_cont.py  meta.py  requirements.txt
src/postgresql_training/docker/: Dockerfile  commands.txt  insert_rows_cont.py  meta.py
