[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps-Training"
version = "0.1.0"
authors = [
    { name="seokgi kim", email="datawhales@github.com" },
]
description = "A mlops-training package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/datawhales/MLOps-Training"
